hphp/hack/test/typecheck/inout/bad_inout_use_variadic2.php
<?hh // strict

function test(): void {
  $f = (string $x, int ...$ys) ==> {};
  $v = 123;
  $f('bar', $v, inout $v);
}
